test push in change directory

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   font-smooth: subpixel-antialiased;
 }
 
-/* ----- title defaults ----- */
+/*  title default  */
 
 /* line 23, ../scss/_common.scss */
 
